--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+      <meta property="og:title" content='ЖК "Всі свої"'>
+      <meta property="og:description" content="Житловий комплекс комфорт-класу у Білогородці">
+      <meta property="og:image" content="https://www.vsisvoihouse.com/img/logo.da6ea89d.svg">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>ЖК "Всі свої"</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
