--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
       <meta property="og:title" content='ЖК "Всі свої"'>
-      <meta property="og:description" content="Житловий комплекс комфорт-класу у Білогородці">
+      <meta property="og:description" content="Квартири і комерційні приміщення в готовому житловому комплексі ВСІ СВОЇ у Білогородці. Вигідні умови придбання.">
       <meta property="og:image" content="https://www.vsisvoihouse.com/img/logo.da6ea89d.svg">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>ЖК "Всі свої"</title>
@@ -15,7 +15,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong></strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
