--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,27 @@
       <meta property="og:image" content="https://www.vsisvoihouse.com/img/logo.da6ea89d.svg">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>ЖК "Всі свої"</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+      <!-- Google Tag Manager -->
+      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+              new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+          j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+          'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-WWDKPLL');</script>
+      <!-- End Google Tag Manager -->
+      <meta name="facebook-domain-verification" content="myssi390a5u0x7zs5e2o5pf0cb5e7e" />
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
       <script src="https://cdn.jsdelivr.net/npm/vue-scrollto"></script>
   </head>
   <body>
-    <noscript>
-      <strong></strong>
-    </noscript>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WWDKPLL"
+                    height="0" width="0" style="display:none;visibility:hidden">
+      </iframe>
+  </noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
